--- a/src/Floream.People/Floream.People.csproj
+++ b/src/Floream.People/Floream.People.csproj
@@ -69,6 +69,10 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\JS\jquery.lazyload.min.js" />
+    <Content Include="Content\JS\jquery.min.js" />
+    <Content Include="Content\JS\jquery.mixitup.min.js" />
+    <Content Include="Content\Style\Style.css" />
     <Content Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -97,6 +101,7 @@
       <Name>Floream.People.DataSources</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
