Added ability to load users from AD, renamed ldap class

--- a/src/Floream.People/Floream.People.csproj
+++ b/src/Floream.People/Floream.People.csproj
@@ -98,7 +98,7 @@
     <Compile Include="App_Start\Bootstrapper.cs" />
     <Compile Include="FloreamIdentity.cs" />
     <Compile Include="FloreamUserMapper.cs" />
-    <Compile Include="LdapAuth.cs" />
+    <Compile Include="Ldap.cs" />
     <Compile Include="Modules\Api.cs" />
     <Compile Include="Modules\HomeModule.cs" />
     <Compile Include="Modules\LoginModule.cs" />
