--- a/src/Floream.People/Floream.People.csproj
+++ b/src/Floream.People/Floream.People.csproj
@@ -55,7 +55,8 @@
     <Reference Include="Nancy.Hosting.Aspnet">
       <HintPath>..\packages\Nancy.Hosting.Aspnet.1.4.1\lib\net40\Nancy.Hosting.Aspnet.dll</HintPath>
     </Reference>
-    <Reference Include="Nancy.ViewEngines.Razor">
+    <Reference Include="Nancy.ViewEngines.Razor, Version=1.4.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Nancy.Viewengines.Razor.1.4.3\lib\net40\Nancy.ViewEngines.Razor.dll</HintPath>
     </Reference>
     <Reference Include="System.DirectoryServices" />
@@ -84,10 +85,13 @@
     <Content Include="Content\css\Style.css" />
     <Content Include="Content\image\polaroid.png" />
     <Content Include="Content\image\Tom-Selleck.jpeg" />
+    <Content Include="Content\js\jquery.fileupload-ui.js" />
+    <Content Include="Content\js\jquery.iframe-transport.js" />
     <Content Include="Content\js\jquery.lazyload.min.js" />
     <Content Include="Content\js\jquery.min.js" />
     <Content Include="Content\js\jquery.mixitup.min.js" />
     <Content Include="Content\js\script.js" />
+    <Content Include="Content\js\vendor\jquery.ui.widget.js" />
     <Content Include="packages.config" />
     <Content Include="Views\Profile\Index.cshtml" />
     <Content Include="Views\Profile\_Picture.cshtml" />
@@ -113,6 +117,7 @@
     <Compile Include="Modules\LoginModule.cs" />
     <Compile Include="Modules\Profile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RazorConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Floream.People.DataSources\Floream.People.DataSources.csproj">
