--- a/src/Floream.People/packages.config
+++ b/src/Floream.People/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
   <package id="Nancy" version="1.4.3" targetFramework="net45" />
   <package id="Nancy.Authentication.Forms" version="1.4.1" targetFramework="net45" />
   <package id="Nancy.Hosting.Aspnet" version="1.4.1" targetFramework="net45" />
+  <package id="Nancy.Viewengines.Razor" version="1.4.3" targetFramework="net45" />
 </packages>
