--- a/src/Floream.People/Floream.People.csproj
+++ b/src/Floream.People/Floream.People.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Enums\Sort.cs" />
     <Compile Include="FloreamIdentity.cs" />
     <Compile Include="FloreamUserMapper.cs" />
+    <Compile Include="Models\PersonProfile.cs" />
     <Compile Include="Models\SearchModel.cs" />
     <Compile Include="Ldap.cs" />
     <Compile Include="Modules\Api.cs" />
@@ -127,6 +128,7 @@
     <Compile Include="Modules\ProfileModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RazorConfig.cs" />
+    <Compile Include="Utils\Constants.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Floream.People.DataSources\Floream.People.DataSources.csproj">
