My changes until 15/01/16

--- a/src/Floream.People.DataSources/Floream.People.DataSources.csproj
+++ b/src/Floream.People.DataSources/Floream.People.DataSources.csproj
@@ -46,11 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Context\PeopleContext.cs" />
+    <Compile Include="Entities\PeopleContext.cs" />
     <Compile Include="Entities\Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Context\" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
