--- a/src/Floream.People/Floream.People.csproj
+++ b/src/Floream.People/Floream.People.csproj
@@ -19,6 +19,7 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -83,16 +84,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\css\floream.css" />
-    <Content Include="Content\css\ie10-viewport-bug-workaround.css" />
-    <Content Include="Content\css\Style.css" />
-    <Content Include="Content\image\logo.png" />
-    <Content Include="Content\image\polaroid.png" />
-    <Content Include="Content\image\Tom-Selleck.jpeg" />
+    <Content Include="Content\css\font-awesome.min.css" />
+    <Content Include="Content\images\bg.jpg" />
+    <Content Include="Content\images\logo.png" />
     <Content Include="Content\js\jquery.fileupload.js" />
     <Content Include="Content\js\jquery.iframe-transport.js" />
     <Content Include="Content\js\bootstrap.min.js" />
-    <Content Include="Content\js\ie-emulation-modes-warning.js" />
-    <Content Include="Content\js\ie10-viewport-bug-workaround.js" />
     <Content Include="Content\js\jquery.lazyload.min.js" />
     <Content Include="Content\js\jquery.min.js" />
     <Content Include="Content\js\jquery.mixitup.min.js" />
@@ -101,9 +98,15 @@
     <Content Include="packages.config" />
     <Content Include="Views\Profile\Index.cshtml" />
     <Content Include="Views\Profile\_Picture.cshtml" />
-    <Content Include="Views\index.cshtml" />
+    <Content Include="Views\Index.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\login.cshtml" />
+    <Content Include="Views\Login.cshtml" />
+    <Content Include="Content\fonts\fontawesome-webfont.eot" />
+    <Content Include="Content\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Content\fonts\fontawesome-webfont.woff" />
+    <Content Include="Content\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Content\fonts\FontAwesome.otf" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -116,13 +119,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\Bootstrapper.cs" />
-    <Compile Include="Enums\Sort.cs" />
     <Compile Include="FloreamIdentity.cs" />
     <Compile Include="FloreamUserMapper.cs" />
-    <Compile Include="Models\PersonProfile.cs" />
     <Compile Include="Models\SearchModel.cs" />
     <Compile Include="Ldap.cs" />
-    <Compile Include="Modules\Api.cs" />
     <Compile Include="Modules\HomeModule.cs" />
     <Compile Include="Modules\LoginModule.cs" />
     <Compile Include="Modules\ProfileModule.cs" />
