Changed a lot of things to make things work

--- a/src/Floream.People.DataSources/Floream.People.DataSources.csproj
+++ b/src/Floream.People.DataSources/Floream.People.DataSources.csproj
@@ -46,13 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\PeopleContext.cs" />
+    <Compile Include="Context\PeopleContext.cs" />
     <Compile Include="Entities\Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Context\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
